--- a/src/app/components/reusable_components/dialog_boxes/invoice-view-dialog-box-component/invoice-view-dialog-box-component.html
+++ b/src/app/components/reusable_components/dialog_boxes/invoice-view-dialog-box-component/invoice-view-dialog-box-component.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>
-  Invoice #{{ data.invoice.invoiceID }}
+  Invoice #{{ invoice()?.invoiceID }}
 </h2>
 
 <mat-dialog-content class="dialog-content">
@@ -9,12 +9,8 @@
     <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
   </div>
 
-  <!-- ================= INVOICE PDF ================= -->
-  <iframe *ngIf="showInvoice() && invoiceUrl() as url" class="invoice-frame" [src]="url | safeUrl" (load)="onLoad()">
-  </iframe>
-
-  <!-- ================= RECEIPT PDF ================= -->
-  <iframe *ngIf="showReceipt() && receiptUrl() as url" class="invoice-frame receipt" [src]="url | safeUrl"
+  <!-- ================= PDF VIEWER ================= -->
+  <iframe *ngIf="pdfUrl() as url" class="invoice-frame" [class.receipt]="showReceipt()" [src]="url | safeUrl"
     (load)="onLoad()">
   </iframe>
 
@@ -36,7 +32,6 @@
             </div>
           </div>
         </mat-radio-button>
-
       </mat-card>
 
       <!-- CARD -->
@@ -51,7 +46,6 @@
             </div>
           </div>
         </mat-radio-button>
-
       </mat-card>
 
       <!-- CARD FORM -->
@@ -82,7 +76,6 @@
       </form>
 
     </div>
-
   </ng-container>
 
 </mat-dialog-content>
