--- a/src/app/components/page_components/dashboard_components/nav_components/bnpl-installmet-payment-simulator-nav-component/bnpl-installmet-payment-simulator-nav-component.html
+++ b/src/app/components/page_components/dashboard_components/nav_components/bnpl-installmet-payment-simulator-nav-component/bnpl-installmet-payment-simulator-nav-component.html
@@ -1,5 +1,61 @@
 <div class="simulator-container">
 
+    <!-- CUSTOMER SEARCH -->
+  <div *ngIf="!customerId()" class="boxed-row">
+    <button mat-stroked-button color="primary" (click)="openCustomerSearch()">
+      Search Customer
+    </button>
+  </div>
+
+  <!-- ORDERS TABLE -->
+  <div *ngIf="orders().length" class="card-wrapper">
+    <mat-card class="section-card">
+
+      <div class="card-header">
+        <div class="card-title">Customer Orders</div>
+        <div class="card-subtitle">Select an order to continue</div>
+      </div>
+
+      <table mat-table [dataSource]="orders()" class="snapshot-table">
+
+        <ng-container matColumnDef="orderId">
+          <th mat-header-cell *matHeaderCellDef>Order #</th>
+          <td mat-cell *matCellDef="let o">{{ o.orderID }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="date">
+          <th mat-header-cell *matHeaderCellDef>Date</th>
+          <td mat-cell *matCellDef="let o">{{ o.createdAt | date }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="total">
+          <th mat-header-cell *matHeaderCellDef class="text-right">Total</th>
+          <td mat-cell *matCellDef="let o" class="text-right">
+            {{ o.totalAmount | number:'1.2-2' }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef>Status</th>
+          <td mat-cell *matCellDef="let o">{{ o.status }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let o">
+            <button mat-flat-button color="primary" (click)="selectOrder(o)">
+              Select
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="orderColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: orderColumns"></tr>
+
+      </table>
+    </mat-card>
+  </div>
+  
   <!-- SIMULATOR FORM -->
   <div class="card-wrapper">
     <mat-card class="section-card simulator-card">
