invoice cancellation is added

--- a/src/app/components/reusable_components/dialog_boxes/invoice-view-dialog-box-component/invoice-view-dialog-box-component.html
+++ b/src/app/components/reusable_components/dialog_boxes/invoice-view-dialog-box-component/invoice-view-dialog-box-component.html
@@ -95,6 +95,11 @@
     Confirm Payment
   </button>
 
+  <!-- CANCEL -->
+  <button mat-button color="warn" *ngIf="canShowCancel()" [disabled]="saving()" (click)="onCancelInvoice()">
+    Cancel
+  </button>
+
   <!-- CLOSE -->
   <button mat-button [disabled]="saving()" (click)="onClose()">
     Close
